--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,18 @@
 <h3>Create an Account</h3>
 <form class="ui form" [formGroup]="authForm">
+  <app-input inputType="text" label="Username" [control]="authForm.get('username')"></app-input>
+  <app-input inputType="password" label="Password" [control]="authForm.get('password')"></app-input>
+  <app-input inputType="password" label="Password Confirmation" [control]="authForm.get('passwordConfirmation')">
+  </app-input>
+
+  <button class="ui submit button primary">
+    Submit
+  </button>
+
+  {{ authForm.errors | json }}
+</form>
+
+<!-- <form class="ui form" [formGroup]="authForm">
   <div class="field">
     <label>Username</label>
     <input formControlName="username" />
@@ -15,4 +28,4 @@
   </div>
   <button class="ui submit button primary"> Submit</button>
   {{authForm.errors | json}}
-</form>
+</form> -->
